--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
