--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-uuid": "^2.0.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "swiper": "^11.1.1"
