--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.16.4",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
