--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
