--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.4",
     "bootstrap-icons": "^1.11.3",
+    "dayjs": "^1.11.11",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
