--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
@@ -20,7 +21,8 @@
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "stripe": "^15.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
