--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.3",
+    "@stripe/stripe-js": "^3.4.0",
     "antd": "^5.16.4",
     "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.11",
