--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-highlight-words": "^0.20.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.1",
+    "react-router": "^6.23.0",
     "react-router-dom": "^6.22.3",
     "react-uuid": "^2.0.0",
     "redux": "^5.0.1",
