--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.1.1",
+    "@ant-design/plots": "^2.2.2",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
@@ -18,6 +20,7 @@
     "antd": "^5.16.4",
     "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.11",
+    "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
