--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
@@ -23,7 +24,9 @@
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
     "slugify": "^1.6.6",
-    "stripe": "^15.5.0"
+    "stripe": "^15.5.0",
+    "winston": "^3.13.0",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
