--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://IlyasKeskinn.github.io/e-commerce",
   "name": "e-commerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeply" :"npm run build",
+    "deploy" : "gh-pages -d dist", 
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
