--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,13 @@
 {
-  "homepage": "https://IlyasKeskinn.github.io/e-commerce",
   "name": "e-commerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy" :"npm run build",
-    "deploy" : "gh-pages -d dist", 
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "@ant-design/charts": "^2.1.1",
@@ -23,7 +20,6 @@
     "antd": "^5.16.4",
     "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.11",
-    "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
